# supra-mvp

./: README.md  run.sh
backend/: .env.example  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/adapters/db/: session.py
backend/adapters/db/models/: __init__.py  user.py  work_order.py
backend/adapters/db/repositories/: __init__.py  user_repository.py  work_order_repository.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_work_orders_table.py
backend/api/: deps.py
backend/api/v1/: auth.py  router.py  users.py  work_orders.py
backend/domain/models/: __init__.py  user.py  work_order.py
backend/domain/ports/: __init__.py  user_repository.py  work_order_repository.py
backend/schemas/: user.py  work_order.py
backend/scripts/: seed_admin.py
backend/services/: work_order_pdf.py
backend/use_cases/: auth.py  work_order.py
frontend/: README.md  package-lock.json
frontend/src/app/: layout.tsx
frontend/src/app/(protected)/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  Select.tsx  Table.tsx
frontend/src/features/auth/: AuthProvider.tsx  LoginForm.tsx
frontend/src/features/dashboard/: DashboardView.tsx
frontend/src/hooks/: useAuth.tsx  useOrders.ts
frontend/src/services/: api.ts  auth.service.ts  orders.service.ts  users.service.ts
frontend/src/types/: user.ts  work-order.ts
(+7 files in other folders)
